Finished integration test